[package]
name = "split-gif"
version = "0.1.0"
edition = "2021"
authors = ["Sam Sargent"]
description = "Save frames of a GIF"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
